--- a/package.json
+++ b/package.json
@@ -23,61 +23,69 @@
     "@mantine/notifications": "^6.0.22",
     "@mantine/prism": "^6.0.22",
     "@swc/helpers": "^0.5.17",
-    "@tabler/icons-react": "^3.31.0",
+    "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-table": "^8.21.3",
-    "core-js": "^3.42.0",
+    "core-js": "^3.45.1",
     "date-fns": "^4.1.0",
-    "foxact": "^0.2.45",
+    "foxact": "^0.2.49",
     "react": "19.0.0-rc-3edc000d-20240926",
     "react-dom": "19.0.0-rc-3edc000d-20240926",
-    "react-router-dom": "^6.30.0",
-    "swr": "^2.3.3",
+    "react-router-dom": "^6.30.1",
+    "swr": "^2.3.6",
     "title": "^3.5.3"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250505.0",
+    "@cloudflare/workers-types": "^4.20250913.0",
     "@eslint-sukka/node": "6.12.0",
     "@eslint-sukka/react": "6.12.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.6.0",
-    "@swc/core": "^1.11.24",
-    "@types/react": "^18.3.20",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.6.1",
+    "@swc/core": "^1.13.5",
+    "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
     "@types/title": "^3.4.3",
-    "browserslist": "^4.24.5",
-    "copy-webpack-plugin": "^13.0.0",
+    "browserslist": "^4.26.0",
+    "copy-webpack-plugin": "^13.0.1",
     "css-minimizer-webpack-plugin": "^7.0.2",
-    "eslint": "^9.26.0",
+    "eslint": "^9.35.0",
     "eslint-config-sukka": "6.12.0",
     "eslint-formatter-sukka": "6.12.0",
-    "html-webpack-plugin": "^5.6.3",
-    "lightningcss": "^1.29.3",
+    "html-webpack-plugin": "^5.6.4",
+    "lightningcss": "^1.30.1",
     "react-refresh": "^0.17.0",
     "swc-loader": "^0.2.6",
     "terser-webpack-plugin": "^5.3.14",
     "tsconfig-paths-webpack-plugin": "^4.2.0",
-    "typescript": "^5.8.3",
-    "webpack": "^5.99.7",
+    "typescript": "^5.9.2",
+    "webpack": "^5.101.3",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.1"
+    "webpack-dev-server": "^5.2.2"
   },
-  "packageManager": "pnpm@10.10.0",
+  "packageManager": "pnpm@10.16.1",
   "pnpm": {
     "overrides": {
-      "array-includes": "npm:@nolyfill/array-includes@latest",
-      "array.prototype.flat": "npm:@nolyfill/array.prototype.flat@latest",
-      "array.prototype.flatmap": "npm:@nolyfill/array.prototype.flatmap@latest",
-      "array.prototype.tosorted": "npm:@nolyfill/array.prototype.tosorted@latest",
-      "es-iterator-helpers": "npm:@nolyfill/es-iterator-helpers@latest",
-      "has": "npm:@nolyfill/has@latest",
-      "object-keys": "npm:@nolyfill/object-keys@latest",
-      "object.assign": "npm:@nolyfill/object.assign@latest",
-      "object.entries": "npm:@nolyfill/object.entries@latest",
-      "object.fromentries": "npm:@nolyfill/object.fromentries@latest",
-      "object.hasown": "npm:@nolyfill/object.hasown@latest",
-      "object.values": "npm:@nolyfill/object.values@latest",
-      "side-channel": "npm:@nolyfill/side-channel@latest",
-      "string.prototype.matchall": "npm:@nolyfill/string.prototype.matchall@latest"
-    }
+      "array-includes": "npm:@nolyfill/array-includes@^1.0.44",
+      "array.prototype.flat": "npm:@nolyfill/array.prototype.flat@^1.0.44",
+      "array.prototype.flatmap": "npm:@nolyfill/array.prototype.flatmap@^1.0.44",
+      "array.prototype.tosorted": "npm:@nolyfill/array.prototype.tosorted@^1.0.44",
+      "es-iterator-helpers": "npm:@nolyfill/es-iterator-helpers@^1.0.21",
+      "has": "npm:@nolyfill/has@^1.0.44",
+      "object-keys": "npm:@nolyfill/object-keys@^1.0.44",
+      "object.assign": "npm:@nolyfill/object.assign@^1.0.44",
+      "object.entries": "npm:@nolyfill/object.entries@^1.0.44",
+      "object.fromentries": "npm:@nolyfill/object.fromentries@^1.0.44",
+      "object.hasown": "npm:@nolyfill/object.hasown@^1.0.44",
+      "object.values": "npm:@nolyfill/object.values@^1.0.44",
+      "side-channel": "npm:@nolyfill/side-channel@^1.0.44",
+      "string.prototype.matchall": "npm:@nolyfill/string.prototype.matchall@^1.0.44",
+      "eslint>chalk": "npm:picocolors@^1.1.1",
+      "title>chalk": "npm:picocolors@^1.1.1"
+    },
+    "ignoredBuiltDependencies": [
+      "core-js"
+    ],
+    "onlyBuiltDependencies": [
+      "@swc/core"
+    ]
   }
 }
